Update Apache Ant
Updated the included Apache Ant from version 1.9.9 to version
1.10.14, which is the latest available version.