@@ -6,9 +6,9 @@ REM  this work for additional information regarding copyright ownership.
 REM  The ASF licenses this file to You under the Apache License, Version 2.0
 REM  (the "License"); you may not use this file except in compliance with
 REM  the License.  You may obtain a copy of the License at
-REM 
-REM      http://www.apache.org/licenses/LICENSE-2.0
-REM 
+REM
+REM      https://www.apache.org/licenses/LICENSE-2.0
+REM
 REM  Unless required by applicable law or agreed to in writing, software
 REM  distributed under the License is distributed on an "AS IS" BASIS,
 REM  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -117,10 +117,25 @@ set _JAVACMD=%JAVACMD%
 if "%JAVA_HOME%" == "" goto noJavaHome
 if not exist "%JAVA_HOME%\bin\java.exe" goto noJavaHome
 if "%_JAVACMD%" == "" set _JAVACMD=%JAVA_HOME%\bin\java.exe
-goto checkJikes
+goto setSecurityManagerOpt
 
 :noJavaHome
 if "%_JAVACMD%" == "" set _JAVACMD=java.exe
+
+:setSecurityManagerOpt
+setlocal EnableDelayedExpansion
+"!_JAVACMD!" -XshowSettings:properties 2>&1 | find "java.specification.version = 18" >nul 2>&1
+if !errorlevel! EQU 0 (
+    rem This is Java 18, so set -Djava.security.manager=allow
+    set JAVA_SECMGR_OPT=-Djava.security.manager=allow
+) else (
+    "!_JAVACMD!" -XshowSettings:properties 2>&1 | find "java.specification.version = 19" >nul 2>&1
+    if !errorlevel! EQU 0 (
+        rem This is Java 19, so set -Djava.security.manager=allow
+        set JAVA_SECMGR_OPT=-Djava.security.manager=allow
+    )
+)
+endlocal & set "ANT_OPTS=%ANT_OPTS% %JAVA_SECMGR_OPT%"
 
 :checkJikes
 if not "%JIKESPATH%"=="" goto runAntWithJikes
